--- a/package.json
+++ b/package.json
@@ -3,48 +3,50 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "start": "gulp"
+    "dev": "gulp",
+    "build": "webpack --config ./webpack.prod.config.js --progress --colors",
+    "server": "json-server --watch ./data/db.json --port 3001",
+    "start": "npm run server & node ./app.js"
   },
   "author": "Branden Dane <danetheory@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "autoprefixer": "^6.3.6",
-    "axios": "^0.9.1",
-    "express": "^4.13.4",
-    "json-server": "^0.8.8",
-    "lodash": "^4.6.1",
-    "node-sass": "^3.6.0",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
-    "react-redux": "^4.4.1",
-    "react-router": "2.0.0",
-    "redux": "^3.3.1",
-    "webpack-dev-server": "^1.14.1"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.5.1",
-    "babel-core": "^6.7.7",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-react-transform": "^2.0.2",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-stage-2": "^6.5.0",
-    "browser-sync": "^2.12.5",
-    "del": "^2.2.0",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-nodemon": "^2.0.6",
-    "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.3.1",
-    "gulp-sourcemaps": "^2.0.0-alpha",
-    "node-sass": "^3.6.0",
-    "react-hot-loader": "^1.3.0",
-    "react-transform-hmr": "^1.0.4",
-    "webpack": "^1.13.0",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-hot-middleware": "^2.10.0",
-    "webpack-stream": "^3.1.0"
-  }
+  "express": "^4.13.4",
+  "react": "^0.14.8",
+  "react-dom": "^0.14.8",
+  "axios": "^0.9.1",
+  "lodash": "^4.6.1",
+  "react-redux": "^4.4.1",
+  "react-router": "2.0.0",
+  "redux": "^3.3.1"
+},
+"devDependencies": {
+  "babel": "^6.5.2",
+  "babel-cli": "^6.6.5",
+  "babel-loader": "^6.2.4",
+  "babel-preset-es2015": "^6.6.0",
+  "babel-preset-react": "^6.5.0",
+  "babel-preset-react-hmre": "^1.1.1",
+  "babel-preset-stage-0": "^6.5.0",
+  "css-loader": "^0.23.1",
+  "file-loader": "^0.8.5",
+  "node-sass": "^3.4.2",
+  "sass-loader": "^3.2.0",
+  "style-loader": "^0.13.1",
+  "url-loader": "^0.5.6",
+  "webpack": "^1.12.14",
+  "webpack-dev-middleware": "^1.6.1",
+  "webpack-hot-middleware": "^2.10.0",
+  "del": "^2.2.0",
+  "gulp": "^3.9.1",
+  "gulp-autoprefixer": "^3.1.0",
+  "gulp-nodemon": "^2.0.6",
+  "gulp-rename": "^1.2.2",
+  "gulp-sass": "^2.3.1",
+  "gulp-sourcemaps": "^2.0.0-alpha",
+  "node-sass": "^3.6.0",
+  "react-hot-loader": "^1.3.0",
+  "react-transform-hmr": "^1.0.4",
+  "webpack-stream": "^3.1.0"
+}
 }
